--- a/aspnet_mvc4-angular-boilerplate/Web.config
+++ b/aspnet_mvc4-angular-boilerplate/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-aspnet_mvc4_angular_boilerplate-20150105225747;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-aspnet_mvc4_angular_boilerplate-20150105225747.mdf" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDB)\LocalDBapp1;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -77,7 +77,7 @@
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="v12.0" />
+        <parameter value="v11.0" />
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
