--- a/aspnet_mvc4-angular-boilerplate/aspnet_mvc4_angular_boilerplate.csproj
+++ b/aspnet_mvc4-angular-boilerplate/aspnet_mvc4_angular_boilerplate.csproj
@@ -187,6 +187,8 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\SessionsController.cs" />
     <Compile Include="Controllers\StaticPagesController.cs" />
+    <Compile Include="Filters\AuthenticationFilter.cs" />
+    <Compile Include="Filters\AppFilterProvider .cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -218,7 +220,6 @@
     <Folder Include="App_Data\" />
     <Folder Include="Areas\" />
     <Folder Include="Exceptions\" />
-    <Folder Include="Filters\" />
     <Folder Include="Images\" />
   </ItemGroup>
   <ItemGroup>
