--- a/aspnet_mvc4-angular-boilerplate/aspnet_mvc4_angular_boilerplate.csproj
+++ b/aspnet_mvc4-angular-boilerplate/aspnet_mvc4_angular_boilerplate.csproj
@@ -188,7 +188,6 @@
     <Compile Include="Controllers\SessionsController.cs" />
     <Compile Include="Controllers\StaticPagesController.cs" />
     <Compile Include="Filters\AuthenticationFilter.cs" />
-    <Compile Include="Filters\AppFilterProvider .cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -197,6 +196,7 @@
     <Compile Include="Models\Users.cs" />
     <Compile Include="Models\Sessions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\BCrypt.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\vendor\bootstrap.css" />
