--- a/aspnet_mvc4-angular-boilerplate/aspnet_mvc4_angular_boilerplate.csproj
+++ b/aspnet_mvc4-angular-boilerplate/aspnet_mvc4_angular_boilerplate.csproj
@@ -39,6 +39,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BCrypt.Net">
+      <HintPath>..\packages\BCrypt-Official.0.1.109\lib\BCrypt.Net.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -196,13 +199,13 @@
     <Compile Include="Models\Users.cs" />
     <Compile Include="Models\Sessions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\BCrypt.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\vendor\bootstrap.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\app\styles.css" />
+    <Content Include="LICENSE.txt" />
     <Content Include="Scripts\angular.js" />
     <Content Include="Scripts\app\app.js" />
     <None Include="Views\StaticPages\Index.cshtml" />
